--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 	<title>Zadorozhnyi Roman - Front-End Developer</title>
 
-	<link rel="icon" href="images/favicon.png">
+	<link rel="icon" href="images/favicon.ico">
 
 	<!--build:css css/styles.min.css-->
 	<link rel="stylesheet" href="css/bundle.min.css">
